<resources>
    <string name="app_name">تقویم پارسی</string>
    <string name="saturday">شنبه</string>
    <string name="sunday">یکشنبه</string>
    <string name="monday">دوشنبه</string>
    <string name="tuesday">سه شنبه</string>
    <string name="wednesdays">چهارشنبه</string>
    <string name="thursday">پنجشنبه</string>
    <string name="friday">جمعه</string>
    <string name="title_activity_app_widget">ویجت</string>
    <string name="events_of_this_day">مناسبت های این روز :</string>
    <string name="set_a_work_to_do">کاری برای انجام در این روز تنظیم کنید</string>
    <string name="no_events_today_google">رویدادهای شما(نیازمند اتصال به تقویم گوگل)</string>
    <string name="google_calendar_events">رویدادهای تقویم گوگل :</string>
    <string name="connecting_to_google_calendar">در حال اتصال به تقویم گوگل…</string>
    <string name="no_internet_connection">دستگاه به اینترنت متصل نیست</string>
    <string name="provide_permission">برای دریافت اطلاعات تقویم گوگل شما، لطفا دسترسی به اکانت خود را فراهم کنید</string>
    <string name="you_have_no_events_today">شما امروز رویدادی ندارید!</string>
    <string name="your_request_cancelled">درخواست شما لغو شد.</string>
    <string name="you_have_no_events_in_this_day">شما در این روز رویدادی ندارید</string>
    <string name="install_google_play_service">این عمل برای اجرا نیاز به گوگل پلی سرویس دارد.لطفا گوگل پلی را نصب کنید و دوباره اپلیکیشن را اجرا کنید</string>
    <string name="please_insert_event_name">لطفا نام رویداد را وارد کنید :</string>
    <string name="today_event">رویداد امروز</string>
    <string name="insert_summary_of_event">خلاصه ای از رویداد را وارد کنید :</string>
    <string name="talk_to_friends">صحبت با دوستان</string>
    <string name="insert_location_of_event">مکان رویداد را وارد کنید :</string>
    <string name="vanak_suqare">تهران،میدان ونک</string>
    <string name="insert_event_start_time">ساعت شروع رویداد را وارد کنید :</string>
    <string name="minute">دقیقه</string>
    <string name="colon">:</string>
    <string name="hour">ساعت</string>
    <string name="insert_event_end_time">ساعت پایان رویداد را وارد کنید :</string>
    <string name="save">ذخیره</string>
    <string name="please_wait">لطفا صبر کنید…</string>
    <string name="please_fill_all_fields">لطفا همه ی فیلد ها را پر کنید</string>
    <string name="please_insert_correct_time">لطفا در ورود اطلاعات ساعت دقت کنید</string>
    <string name="start_time_cannot_be_greater_than_end_time">ساعت شروع نمیتواند از ساعت پایان بیشتر باشد</string>
    <string name="some_thing_happend_try_again">متاسفانه مشکلی رخ داد، لطفا دوباره تلاش کنید.</string>
    <string name="event_has_set_successfully">رویداد با موفقیت تنظیم شد.</string>
    <string name="harcoding_date_string">:00+03:30</string>
    <string name="all_day">تمام روز</string>
    <string name="please_login_from_main_page">لطفا ابتدا از صفحه ی اصلی به تقویم گوگل خود متصل شوید</string>
    <string name="last_month">ماه قبل</string>
    <string name="next_month">ماه بعد</string>
    <string name="farvardin">فروردین</string>
    <string name="ordibehesht">اردیبهشت</string>
    <string name="khordad">خرداد</string>
    <string name="tir">تیر</string>
    <string name="mordad">مرداد</string>
    <string name="shahrivar">شهریور</string>
    <string name="mehr">مهر</string>
    <string name="aban">آبان</string>
    <string name="azar">آذر</string>
    <string name="dey">دی</string>
    <string name="bahman">بهمن</string>
    <string name="esfand">اسفند</string>
    <string name="january">ژانویه</string>
    <string name="february">فوریه</string>
    <string name="march">مارس</string>
    <string name="april">آوریل</string>
    <string name="may">مه</string>
    <string name="jun">ژوئن</string>
    <string name="july">ژوئیه</string>
    <string name="august">اوت</string>
    <string name="september">سپتامبر</string>
    <string name="october">اکتبر</string>
    <string name="november">نوامبر</string>
    <string name="december">دسامبر</string>
    <string name="widget_persian_date">%s %s/%s/%s</string>
    <string name="widget_gregorian_date">%s %s %s</string>
</resources>
